--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     </svg>
                     <div class="line"></div>
                 </div>
-                <p class="subtitle">Mutluuu Benlii Yıllaaarrr Aşkıııımmm ❤️</p>
+                <p class="subtitle">Mutlu yıllar aşkımm, kalbim hep seninle. Nice yıllara birlikte  ❤️</p>
             </div>
 
             <!-- Right Column -->
@@ -603,4 +603,5 @@
         });
     </script>
 </body>
+
 </html>
